# dogbot

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy.yml  release.yml
migrations/2026-04-14-212020-0000_create_chats/: up.sql
migrations/2026-04-14-212025-0000_create_users/: up.sql
migrations/2026-04-14-212147-0000_create_messages/: up.sql
migrations/2026-04-14-212228-0000_create_files/: up.sql
migrations/2026-04-14-215542-0000_create_users_in_chats/: down.sql  up.sql
migrations/2026-04-14-221712-0000_alter_users_add_current_connection/: down.sql  up.sql
migrations/2026-04-15-073832-0000_fix_files_unique_constraint/: down.sql  up.sql
migrations/2026-04-15-225242-0000_alter_files_others_read_default_true/: down.sql  up.sql
migrations/2026-04-16-055149-0000_alter_files_add_on_delete_parent_cascade/: down.sql  up.sql
migrations/2026-04-16-071223-0000_alter_messages_user_id_nullable/: down.sql  up.sql
migrations/2026-04-18-221656-0000_alter_files_add_more_permissions/: down.sql  up.sql
migrations/2026-04-20-030930-0000_alter_files_add_last_modified_at/: down.sql  up.sql
migrations/2026-04-22-184102-0000_alter_files_add_root_file/: down.sql  up.sql
migrations/2026-04-22-195534-0000_alter_files_add_is_dir/: down.sql  up.sql
src/: chat_address.rs  formatted.rs  main.rs  prelude.rs  result.rs  schema.rs  timeout.rs
src/commands/: chmod.rs  chown.rs  connect.rs  disconnect.rs  download.rs  help.rs  hostname.rs  id.rs  ls.rs  mkdir.rs  mod.rs  read.rs  rm.rs  upload.rs  write.rs
(+11 files in other folders)
